chore: config and logger

--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "build": "tsc",
     "start": "node ./dist/server.js",
     "test": "jest"
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "format": "prettier --write src/**/*.ts"
   },
   "keywords": [],
   "author": "shuv1824",
