--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ MONGODB_URI=mongodb://localhost:27017/express-api
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=604800
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
